Implement INCREMENT instruction
Add INCREMENT instruction (see https://wiki.phpbb.com/MOD_Text_Template)
to library with limitation described in README file

--- a/expected.html
+++ b/expected.html
@@ -1,5 +1,8 @@
 <head>
+    <title>
+        Example&nbsp INCREMENT &nbsp usage
+    </title>>
     <body>
-        Hello&nbsp world!
+        Tokyo 3
     </body>
 </head>
